# mcp-amadeus

./: pyproject.toml
src/: server.py
src/mcp_amadeus/: server.py
